--- a/README
+++ b/README
@@ -1,6 +1,7 @@
 CSV Combiner 
 ---------------
-command line program that takes in csv files as arguments and and combines the csv files while adding a column that states the states the filename from which that row came from. The results is outputs in a new csv file. 
+command line program that takes in CSV files as arguments and combines them while adding a column that states the filename from which that row came from. The result is outputed in a new csv file. 
+ 
 
 Input & Output
 ---------------
@@ -8,6 +9,13 @@ This is the format at which I expect to see
 
 $ node main.js ./fixtures/accessories.csv ./fixtures/clothing.csv combined.csv
 
-The first two CSV files are the files that will be merged and the last CSV file is the file that will hold the results. 
+All of the CSV files between main.js and the last CSV file are the files that will be merged and the last CSV file is the file that will hold the results. 
+
+Can combine mutiple csv files. An example of 3 files is shown below. 
+
+$ node main.js ./fixtures/accessories.csv ./fixtures/clothing.csv ./fixtures/household_cleaners.csv combined.csv
+
+
+
 
 
